CDRA-432[Mobile Rendering Issue] Fix the alignment issue for "Rewards Description" on create page.
[Mobile Rendering Issue] Fix the alignment issue for "Rewards
Description" on create page.

--- a/web-app/css/fedu.css
+++ b/web-app/css/fedu.css
@@ -1192,6 +1192,11 @@ text-decoration: none !important;
     height:200px;
     }
 }
+@media only screen and (max-width: 767px){
+	.rewarddesc,.rewarddesctitle {
+	    margin-left: -14px !important;
+	}
+}   
 @media only screen and (max-width: 768px){
 .nav > li > a {
     padding: 7px 17px;
@@ -1325,7 +1330,6 @@ textarea.form-control {
     width:100%;
    }
    .rewarddesc {
-    width: 114%;
     margin-left: -14px;
    }
    .rewarddesctitle{
